# ai-cost-auditor-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: usage.md
src/ai_cost_auditor_mcp/: __init__.py  compare.py  cost.py  pricing.py  token_waste.py  tokenizer.py
tests/: test_compare.py  test_cost.py  test_token_waste.py  test_tokenizer.py
